--- a/main.scss
+++ b/main.scss
@@ -3,8 +3,11 @@
     font: normal 14px Roboto;
     margin: 0;
     padding: 0;
+    padding-top: 20px;
+    columns: 3;
     &__wrapper {
         padding-bottom: 10px;
+        break-inside: avoid;
     }
     &__item {
         margin: 0;
@@ -51,5 +54,8 @@
                 text-decoration: underline;
             }
         }
+    }
+    &_column {
+        columns: 1;
     }
 }
