--- a/main.css
+++ b/main.css
@@ -2,9 +2,14 @@
   text-align: left;
   font: normal 14px Roboto;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  padding-top: 20px;
+  -webkit-columns: 3;
+          columns: 3; }
   .company-list__wrapper {
-    padding-bottom: 10px; }
+    padding-bottom: 10px;
+    -webkit-column-break-inside: avoid;
+            break-inside: avoid; }
   .company-list__item {
     margin: 0;
     padding: 0; }
@@ -39,3 +44,6 @@
     line-height: 16px; }
     .company-list__subcat-link:hover {
       text-decoration: underline; }
+  .company-list_column {
+    -webkit-columns: 1;
+            columns: 1; }
