--- a/main.scss
+++ b/main.scss
@@ -5,7 +5,7 @@
     padding: 0;
     padding-top: 20px;
     columns: 3;
-    &__wrapper {
+    &__block {
         padding-bottom: 10px;
         break-inside: avoid;
     }
