--- a/main.css
+++ b/main.css
@@ -5,49 +5,65 @@
   padding: 0;
   padding-top: 20px;
   -webkit-columns: 3;
-          columns: 3; }
-  .company-list__wrapper {
-    padding-bottom: 10px;
-    -webkit-column-break-inside: avoid;
-            break-inside: avoid; }
-  .company-list__item {
-    margin: 0;
-    padding: 0; }
-    .company-list__item-link {
-      color: #105cb6;
-      text-decoration: none; }
-      .company-list__item-link:hover {
-        text-decoration: underline; }
-  .company-list__green {
-    text-align: left;
-    font-size: 16px;
-    line-height: 24px;
-    padding-bottom: 6px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
-    .company-list__green-link {
-      color: green;
-      text-decoration: none; }
-      .company-list__green-link:hover {
-        text-decoration: underline; }
-  .company-list__section {
-    margin: 0;
-    padding: 0; }
-    .company-list__section-link {
-      color: #105cb6;
-      text-decoration: none; }
-      .company-list__section-link:hover {
-        text-decoration: underline; }
-  .company-list__subcat-link {
-    color: #105cb6;
-    text-decoration: none;
-    line-height: 16px; }
-    .company-list__subcat-link:hover {
-      text-decoration: underline; }
-  .company-list_column {
+          columns: 3;
+}
+.company-list__block {
+  padding-bottom: 10px;
+  -webkit-column-break-inside: avoid;
+          break-inside: avoid;
+}
+.company-list__item {
+  margin: 0;
+  padding: 0;
+}
+.company-list__item-link {
+  color: #105cb6;
+  text-decoration: none;
+}
+.company-list__item-link:hover {
+  text-decoration: underline;
+}
+.company-list__green {
+  text-align: left;
+  font-size: 16px;
+  line-height: 24px;
+  padding-bottom: 6px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.company-list__green-link {
+  color: green;
+  text-decoration: none;
+}
+.company-list__green-link:hover {
+  text-decoration: underline;
+}
+.company-list__section {
+  margin: 0;
+  padding: 0;
+}
+.company-list__section-link {
+  color: #105cb6;
+  text-decoration: none;
+}
+.company-list__section-link:hover {
+  text-decoration: underline;
+}
+.company-list__subcat-link {
+  color: #105cb6;
+  text-decoration: none;
+  line-height: 16px;
+}
+.company-list__subcat-link:hover {
+  text-decoration: underline;
+}
+.company-list_column {
+  -webkit-columns: 1;
+          columns: 1;
+}
+@media all and (max-width: 465px) {
+  .company-list {
     -webkit-columns: 1;
-            columns: 1; }
-  @media all and (max-width: 465px) {
-    .company-list {
-      -webkit-columns: 1;
-              columns: 1; } }
+            columns: 1;
+  }
+}
